# pedestrian-detect-and-track

./: CMakeLists.txt  DetectAndSort.cpp  DetectAndSort.h  demo_omp.cpp  main.cpp  test.cpp  yolov5.cpp  yolov5_videox.cpp
newfinal/: CMakeLists.txt
newfinal/include/: DetectAndSort.h  common.hpp  deepsort.h  yololayer.h
newfinal/src/: main.cpp
tracking/: makelib.sh
tracking/src/: CMakeLists.txt
tracking/src/api/: deepsort.cpp  deepsort.h
tracking/src/matching/: linear_assignment.cpp  nn_matching.cpp  track.cpp  track.h  tracker.cpp
tracking/src/thirdPart/Eigen/src/SVD/: BDCSVD.h
tracking/src/thirdPart/munkres/: munkres.h
